--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001 --turbopack",
-    "build": "next build",
-    "start": "next start -p 3001",
+    "dev": "next dev -p 3000 --turbopack",
+    "build": "next build && next start --port 3000",
+    "start": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
