--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3000 --turbopack",
     "build": "next build && next start --port 3000",
+    "build-product": "next build && next start --port 2011",
     "start": "next start -p 3000",
     "lint": "next lint"
   },
